--- a/requirements.txt
+++ b/requirements.txt
@@ -5,6 +5,7 @@ Flask==3.1.2
 Flask-Bcrypt==1.0.1
 Flask-MySQLdb==2.0.0
 Flask-SQLAlchemy==3.1.1
+Flask-Migrate
 git-filter-repo==2.47.0
 greenlet==3.2.4
 itsdangerous==2.2.0
@@ -12,6 +13,7 @@ Jinja2==3.1.6
 Markdown==3.9
 MarkupSafe==3.0.2
 mysqlclient==2.2.7
+openpyxl
 SQLAlchemy==2.0.43
 typing_extensions==4.15.0
 Werkzeug==3.1.3
