--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,4 @@
-bcrypt==4.3.0
+bcrypt==5.0.0
 blinker==1.9.0
 click==8.2.1
 Flask==3.1.2
@@ -14,6 +14,7 @@ Markdown==3.9
 MarkupSafe==3.0.2
 mysqlclient==2.2.7
 openpyxl
+python-dotnet
 SQLAlchemy==2.0.43
 typing_extensions==4.15.0
 Werkzeug==3.1.3
