feat(settings/contacts): make contacts and setting tables sortable and searchable.

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,4 +1,10 @@
 {
 	"codingcopilot.autoRun": true,
-	"codingcopilot.modelDocumentLanguage": "English"
+	"codingcopilot.modelDocumentLanguage": "English",
+	"files.associations": {
+		"*.html": "jinja-html"
+	},
+	"emmet.includeLanguages": {
+		"jinja-html": "html"
+	}
 }
