--- a/requirements.txt
+++ b/requirements.txt
@@ -14,7 +14,8 @@ Markdown==3.9
 MarkupSafe==3.0.2
 mysqlclient==2.2.7
 openpyxl
-python-dotnet
 SQLAlchemy==2.0.43
 typing_extensions==4.15.0
 Werkzeug==3.1.3
+python-dotenv==1.0.0
+PyMySQL==1.1.2
