feat(settings): allow editing role model in the settings

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -9,5 +9,9 @@
 	},
 	"python-envs.defaultEnvManager": "ms-python.python:conda",
 	"python-envs.defaultPackageManager": "ms-python.python:conda",
-	"python-envs.pythonProjects": []
+	"python-envs.pythonProjects": [],
+	"geminicodeassist.agentDebugMode": true,
+	"geminicodeassist.agentYoloMode": true,
+	"geminicodeassist.codeGenerationPaneViewEnabled": true,
+	"geminicodeassist.inlineSuggestions.nextEditPredictions": true
 }
