--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,6 @@
 bcrypt==5.0.0
 blinker==1.9.0
-click==8.2.1
+click==8.1.7
 Flask==3.1.2
 Flask-Bcrypt==1.0.1
 Flask-MySQLdb==2.0.0
@@ -20,3 +20,5 @@ Werkzeug==3.1.3
 python-dotenv==1.0.0
 PyMySQL==1.1.2
 gunicorn
+requests
+urllib3<2.0.0
