feat: Add 'not-role' type for roles, display Excomm Team details, and refactor settings to separate club and excomm configurations.

--- a/settings.ini
+++ b/settings.ini
@@ -1,5 +1,15 @@
-[ClubSettings]
+[Club Settings]
 Club Name = Shanghai Leadership Toastmasters Club
-Term = 25H2
-Excomm Name = LUMIN
 Meeting Start Time = 18:55
+
+[Excomm Team]
+Term = 26H1
+Excomm Name = TBD
+President = John Zhang
+VPE = Samantha Yan
+VPM = Cathy Ma
+VPPR = Ayauly Dakhayeva
+Secretary = Caoimhe McCotter
+Treasurer = Alex Xing
+SAA = Kyle Wei
+IPP = Siqi Shao
