feat: Dynamically load meeting types from settings, add Gavel Passing template, and enhance contacts page with type-based filtering and improved UI.

--- a/settings.ini
+++ b/settings.ini
@@ -13,3 +13,13 @@ Secretary = Caoimhe McCotter
 Treasurer = Alex Xing
 SAA = Kyle Wei
 IPP = Siqi Shao
+
+[Meeting Types]
+Club Election = club_election.csv, #FFDDC1, #000000
+Debate = debate.csv, #D4F1F4, #000000
+Keynote Speech = default.csv, #C1E1C1, #000000
+Panel Discussion = panel_discussion.csv, #F0E68C, #000000
+Speech Contest = speech_contest.csv, #E6E6FA, #000000
+Speech Marathon = speech_marathon.csv, #FFC0CB, #000000
+Pecha Kucha = pecha_kucha.csv, #FFD700, #000000
+Gavel Passing = gavel_passing.csv, #E0FFFF, #000000
