--- a/settings.ini
+++ b/settings.ini
@@ -4,7 +4,7 @@ Meeting Start Time = 18:55
 
 [Excomm Team]
 Term = 26H1
-Excomm Name = TBD
+Excomm Name = Excomm Team 
 President = John Zhang
 VPE = Samantha Yan
 VPM = Cathy Ma
