feat: consolidate identical role logs in speech log view and update Excomm team name.

--- a/settings.ini
+++ b/settings.ini
@@ -4,7 +4,7 @@ Meeting Start Time = 18:55
 
 [Excomm Team]
 Term = 26H1
-Excomm Name = Excomm Team 
+Excomm Name = Memory Makers 
 President = John Zhang
 VPE = Samantha Yan
 VPM = Cathy Ma
