configure deployment settings

--- a/.env.example
+++ b/.env.example
@@ -1,8 +1,20 @@
 # Copy this file to .env and fill in your actual values.
 # Do NOT commit the .env file to version control.
 
-# A strong, random secret key for Flask sessions and security
-SECRET_KEY=your_strong_random_secret_key_here
+# Database
+DATABASE_URL=mysql+pymysql://root:<root_password>@<hostname>/<database>
+
+# Flask
+SECRET_KEY=
+TALLY_API_KEY=""
+TALLY_FORM_ID=""
+
+MAIL_SERVER=smtp.gmail.com
+MAIL_PORT=587
+MAIL_USE_TLS=true
+MAIL_USERNAME=<email_address>
+MAIL_DEFAULT_SENDER=<email_addr>
+MAIL_PASSWORD=<app_password>
 
 # MySQL Settings
 MYSQL_DATABASE=vpemaster
