--- a/requirements.txt
+++ b/requirements.txt
@@ -27,3 +27,8 @@ Flask-Assets==2.1.0
 cssmin==0.2.0
 Flask-Mail
 Pillow==11.0.0
+
+# Testing dependencies
+pytest>=9.0.0
+pytest-cov>=7.0.0
+pytest-watch>=4.2.0
