--- a/requirements.txt
+++ b/requirements.txt
@@ -26,6 +26,7 @@ Flask-Login==0.6.3
 Flask-Assets==2.1.0
 cssmin==0.2.0
 Flask-Mail==0.10.0
+Flask-Principal==0.4.0
 Pillow==11.0.0
 
 # Testing dependencies
