implement the new permission control and management interface

--- a/pytest.ini
+++ b/pytest.ini
@@ -19,6 +19,10 @@ addopts =
     --tb=short
     --disable-warnings
 
+# Filter out third-party warnings that we cannot fix
+filterwarnings =
+    ignore:datetime.datetime.utcnow\(\) is deprecated:DeprecationWarning:flask_login
+
 # Markers for categorizing tests
 markers =
     unit: Unit tests (fast, isolated)
