--- a/requirements.txt
+++ b/requirements.txt
@@ -28,6 +28,7 @@ cssmin==0.2.0
 Flask-Mail==0.10.0
 Flask-Principal==0.4.0
 Pillow==11.0.0
+python-pptx==1.0.2
 
 # Testing dependencies
 pytest>=9.0.0
