fix club-context for guest route access

--- a/.env.example
+++ b/.env.example
@@ -21,3 +21,7 @@ MYSQL_DATABASE=vpemaster
 MYSQL_USER=root
 MYSQL_PASSWORD=your_secure_mysql_password
 MYSQL_ROOT_PASSWORD=your_secure_mysql_root_password
+SEPOLIA_RPC_URL=
+WALLET_PRIVATE_KEY=
+LEVEL_TRACKER_CONTRACT_ADDRESS=
+
